src/app/(protected)/items/[setId]/ItemDetailPage.module.scss
@use "../../../../styles/variables" as v;
@use "../../../../styles/mixins" as m;

.container {
  display: flex;
  flex-direction: column;
  gap: 4rem;
}

.setCard {
  display: grid;
  grid-template-columns: 1fr;
  max-width: 650px;
  padding: 1.2rem;
  background-color: v.$clr-bg-card;
  border-radius: v.$border;
  box-shadow: v.$shadow;
  margin-block: 4rem;
  gap: 2rem;
  margin: auto;

  @include m.up(md) {
    grid-template-columns: 1fr 1fr;
  }
}

.imgContainer {
  position: relative;
  width: 100%;
  border-radius: 8px;
  display: flex;
  justify-content: center;
  overflow: hidden;

  .image {
    object-fit: contain;
  }
}

.detailsContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;

  @include m.up(md) {
    padding: 0;
  }
}

.details {
  margin: 0;
  display: grid;
  grid-template-columns: max-content 1fr;
  row-gap: 0.7rem;
  column-gap: 3rem;

  dd {
    margin: 0;
  }
}

.traderaLogo {
  position: relative;
  width: 140px;
  height: 40px;
}

.logoImg {
  object-fit: contain;
}

.message {
  margin: 0.5rem 0;
}

.muted {
  opacity: 0.8;
}

